Bug 168054 - When extracting .svg files from .odg files, only the first page is extracted.
Summary: When extracting .svg files from .odg files, only the first page is extracted.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
25.8.0.4 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.5 target:26...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-08-22 03:35 UTC by HyungKi Jeong
Modified: 2026-01-28 22:01 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description HyungKi Jeong 2025-08-22 03:35:05 UTC
Description:
Enter the command below to extract the .odg file.

"D:\Program Files\LibreOffice\program\soffice.exe" --draw --headless --convert-to svg:"draw_svg_Export" --outdir output_svg your_file.odg

This will extract only the first page on Draw from the current version.
For example, in the past version v25.2.0.1, all pages were extracted normally.

Steps to Reproduce:
1. make '.odg' file with multiple pages.
2. try the following command.
   "D:\Program Files\LibreOffice\program\soffice.exe" --draw --headless --convert-to svg:"draw_svg_Export" --outdir output_svg your_file.odg
3. Compare results with those from the previous version v25.2.0.1.

Actual Results:
Only the first 'Draw' page appeared.

Expected Results:
All page results should be saved as a single .svg file.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: ko-KR (ko_KR); UI: ko-KR
Calc: threaded
Comment 1 raal 2025-08-22 06:06:24 UTC
Confirm Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 953a4159ba48b2901e6b1660fc89960fcaa87b0c
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 tkakar 2025-11-30 08:09:49 UTC
Bibisected to the following commit using win64-25.8 repo. 

Regression Details: In previous commits (Good), the command output only the Last Page (Page 2), implying it was processing all pages but overwriting the output file.

Starting with the bad commit below, the behavior changed to outputting only the First Page (Page 1), implying the process now aborts early.

Bad Commit: commit 1809bd2683d678eaed8756fbe82d245bdf05fa28
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu May 29 01:44:31 2025 -0700
source 58ba249df589b0c9f91667f2938bfa18d2a1ce61
Comment 3 Mike Kaganski 2025-12-01 15:25:30 UTC
(In reply to HyungKi Jeong from comment #0)
> Actual Results:
> Only the first 'Draw' page appeared.
> 
> Expected Results:
> All page results should be saved as a single .svg file.

Why? What makes "all pages overlapping" be "correct", as opposed to the "only a single page exported", same as with e.g. PNG?
Comment 4 Commit Notification 2025-12-04 19:35:57 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b152ca62b9fdb4a667440ae20e96612dcc12191e

tdf#168054: Export all ODG pages to SVG from command line by default

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2026-01-28 15:59:27 UTC
Verified in

Version: 26.2.1.0.0+ (X86_64)
Build ID: a6b21db5d0f424d32c78b1514756c7b76c05c8e1
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Mike, thanks for fixing this issue!!
Comment 6 Commit Notification 2026-01-28 16:00:33 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/01e4b2008da867ed85982cfb0b62ee1be51ae741

tdf#168054: Export all ODG pages to SVG from command line by default

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2026-01-28 22:01:15 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/46d70b02786fb4fae3e3c6ea69a2d4d985c52b7c

tdf#168054: filter_svg: Add tests

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.